--- a/public/events.html
+++ b/public/events.html
@@ -1,38 +1,165 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>sjsu.info – Events</title>
-    <link rel="stylesheet" href="assets/styles.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>SJSU.INFO – Events Around SJSU</title>
+    <meta name="description" content="Explore a demo list of events around SJSU on SJSU.INFO. Filter by type and location; add off‑campus events (mock)." />
+    <link rel="canonical" href="https://sjsu.info/events.html" />
+    <meta property="og:title" content="SJSU.INFO – Events Around SJSU" />
+    <meta property="og:description" content="Campus and community events around SJSU with filters and a demo add flow." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sjsu.info/events.html" />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1500534314209-a25ddb2bd429?q=80&w=1600&auto=format&fit=crop" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="theme-color" content="#0b5394" />
+    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = { theme: { extend: { colors: { brand: '#0b5394' } } } }
+    </script>
   </head>
-  <body data-page="events">
-    <header>
-      <div class="container nav">
-        <div class="brand">sjsu.info</div>
-        <nav>
-          <a href="index.html">Home</a>
-          <a href="marketplace.html">Marketplace</a>
-          <a href="events.html">Events</a>
-        </nav>
+  <body class="min-h-screen bg-slate-50 text-slate-900" data-page="events">
+    <header class="sticky top-0 z-50 border-b border-slate-200 bg-white/80 backdrop-blur">
+      <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+        <div class="flex h-16 items-center justify-between">
+          <a href="index.html" class="font-semibold text-brand">SJSU.INFO</a>
+          <button class="js-menu-toggle inline-flex items-center rounded-md border border-slate-300 bg-white p-2 text-slate-700 hover:bg-slate-50 md:hidden" aria-label="Open menu" aria-controls="primary-nav" aria-expanded="false">
+            <svg class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M4 6h16M4 12h16M4 18h16"/></svg>
+          </button>
+          <nav id="primary-nav" class="hidden items-center gap-6 text-sm md:flex" aria-label="Primary">
+            <a class="hover:text-brand" href="index.html">Home</a>
+            <a class="hover:text-brand" href="marketplace.html">Marketplace</a>
+            <a class="hover:text-brand" href="events.html">Events</a>
+            <a class="hover:text-brand" href="parking.html">Parking</a>
+            <a class="hover:text-brand" href="international.html">International</a>
+            <a class="hover:text-brand" href="about.html">About</a>
+          </nav>
+        </div>
+        <div class="js-mobile-menu hidden border-t border-slate-200 bg-white md:hidden">
+          <nav class="grid gap-2 px-4 py-3 text-sm" aria-label="Mobile">
+            <a class="py-1 hover:text-brand" href="index.html">Home</a>
+            <a class="py-1 hover:text-brand" href="marketplace.html">Marketplace</a>
+            <a class="py-1 hover:text-brand" href="events.html">Events</a>
+            <a class="py-1 hover:text-brand" href="parking.html">Parking</a>
+            <a class="py-1 hover:text-brand" href="international.html">International</a>
+            <a class="py-1 hover:text-brand" href="about.html">About</a>
+          </nav>
+        </div>
       </div>
     </header>
+    <section class="relative overflow-hidden">
+      <div class="absolute inset-0 -z-10 bg-gradient-to-r from-sky-50 via-white to-indigo-50"></div>
+      <div class="mx-auto max-w-7xl px-2">
+        <div class="flex h-5 items-center justify-center gap-2 leading-none text-[12px] text-slate-700">
+          <span>Interested in buying this domain: sjsu.info?</span>
+          <a href="https://checkoutlink.godaddy.com/d10c6216-2638-436d-8c3b-32ab31fe798f" target="_blank" rel="noopener" class="text-brand font-medium underline underline-offset-2 whitespace-nowrap">Buy Now</a>
+        </div>
+      </div>
+    </section>
 
-    <main class="container">
-      <h1>Events Around SJSU</h1>
-      <p class="muted">Campus happenings, career fairs, sports, and community events.</p>
+    <main class="mx-auto max-w-7xl px-4 py-8 sm:px-6 lg:px-8">
+      <div class="mb-6">
+        <h1 class="text-2xl font-bold">Events Around SJSU</h1>
+        <p class="mt-1 text-slate-600">Campus happenings, career fairs, sports, and community events. Filter by type or on/off‑campus, or post an off‑campus event (demo).</p>
+      </div>
 
-      <div class="events"></div>
+      <section class="relative overflow-hidden rounded-2xl border border-slate-200">
+        <div class="absolute inset-0 -z-10 bg-[url('https://images.unsplash.com/photo-1500534314209-a25ddb2bd429?q=80&w=1600&auto=format&fit=crop')] bg-cover bg-center opacity-10"></div>
+        <div class="p-4 sm:p-6">
+          <!-- Filters toolbar -->
+          <div class="mb-6 flex flex-wrap items-center gap-3">
+            <input id="evSearch" type="search" placeholder="Search events" aria-label="Search events" class="w-full max-w-xs rounded-md border border-slate-300 bg-white px-3 py-2 text-sm shadow-sm focus:border-brand focus:outline-none focus:ring-1 focus:ring-brand" />
+            <select id="evType" aria-label="Filter by type" class="rounded-md border border-slate-300 bg-white px-3 py-2 text-sm shadow-sm focus:border-brand focus:outline-none focus:ring-1 focus:ring-brand">
+              <option value="">All types</option>
+              <option>Career</option>
+              <option>Sports</option>
+              <option>Community</option>
+              <option>Student Life</option>
+              <option>Tech</option>
+              <option>Arts</option>
+              <option>Service</option>
+              <option>Entrepreneurship</option>
+              <option>Academics</option>
+            </select>
+            <select id="evCampus" aria-label="On/Off campus" class="rounded-md border border-slate-300 bg-white px-3 py-2 text-sm shadow-sm focus:border-brand focus:outline-none focus:ring-1 focus:ring-brand">
+              <option value="">All locations</option>
+              <option value="on">On campus</option>
+              <option value="off">Off campus</option>
+            </select>
+            <div class="grow"></div>
+            <button id="openAddEvent" type="button" class="inline-flex items-center rounded-md bg-brand px-3 py-2 text-sm text-white shadow hover:bg-brand/90">
+              <svg class="mr-2 h-4 w-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M12 5v14M5 12h14"/></svg>
+              Add Off‑campus Event
+            </button>
+          </div>
+
+          <div class="events space-y-3"></div>
+        </div>
+      </section>
     </main>
 
-    <footer>
-      <div class="container">
-        <small>© <span id="year"></span> sjsu.info • Demo site for domain sale</small>
+    <!-- Add Event Modal (mock) -->
+    <div id="evModalBackdrop" class="fixed inset-0 z-50 hidden items-center justify-center bg-slate-900/50 p-4">
+      <div class="w-full max-w-xl rounded-xl border border-slate-200 bg-white p-5 shadow-xl">
+        <div class="mb-3 flex items-center justify-between">
+          <h3 class="text-lg font-semibold">Add Off‑campus Event (Demo)</h3>
+          <button id="evCancelModal" class="rounded-md border border-slate-300 bg-white px-2 py-1 text-sm hover:bg-slate-50">Close</button>
+        </div>
+        <form id="evForm" class="grid gap-3">
+          <input id="evTitle" type="text" placeholder="Title" required class="rounded-md border border-slate-300 px-3 py-2 text-sm" />
+          <div class="grid gap-3 sm:grid-cols-2">
+            <input id="evDate" type="date" required class="rounded-md border border-slate-300 px-3 py-2 text-sm" />
+            <input id="evTime" type="time" class="rounded-md border border-slate-300 px-3 py-2 text-sm" />
+          </div>
+          <input id="evLocation" type="text" placeholder="Location (e.g., San Pedro Square)" required class="rounded-md border border-slate-300 px-3 py-2 text-sm" />
+          <select id="evTypeInput" required class="rounded-md border border-slate-300 px-3 py-2 text-sm">
+            <option value="">Type</option>
+            <option>Community</option>
+            <option>Tech</option>
+            <option>Arts</option>
+            <option>Career</option>
+            <option>Student Life</option>
+            <option>Sports</option>
+            <option>Service</option>
+            <option>Entrepreneurship</option>
+            <option>Academics</option>
+          </select>
+          <input id="evLink" type="url" placeholder="Link (optional)" class="rounded-md border border-slate-300 px-3 py-2 text-sm" />
+          <textarea id="evDesc" rows="3" placeholder="Description" class="rounded-md border border-slate-300 px-3 py-2 text-sm"></textarea>
+          <div class="flex justify-end gap-2">
+            <button type="button" id="evSubmit" class="rounded-md bg-brand px-4 py-2 text-sm text-white hover:bg-brand/90">Submit (Mock)</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <footer class="border-t border-slate-200 bg-white">
+      <div class="mx-auto max-w-7xl px-4 py-12 sm:px-6 lg:px-8">
+        <div class="grid gap-6 md:grid-cols-3">
+          <div class="md:col-span-2">
+            <h4 class="text-lg font-semibold text-slate-900">SJSU.INFO</h4>
+            <p class="mt-2 max-w-2xl text-slate-600">This is a demo project showcasing how this domain could be used to provide helpful information for students around San Jose State University. Not affiliated with or endorsed by SJSU.</p>
+            <p class="mt-3 text-sm text-slate-500">© <span id="year"></span> SJSU.INFO • Demo/mock content.</p>
+          </div>
+          <div class="flex flex-col items-start gap-2 md:items-end md:justify-end">
+            <p class="text-sm text-slate-600">If you're interested:</p>
+            <div class="flex flex-wrap items-center gap-3">
+              <a
+                href="https://checkoutlink.godaddy.com/d10c6216-2638-436d-8c3b-32ab31fe798f"
+                target="_blank" rel="noopener"
+                class="inline-flex items-center rounded-md bg-brand px-5 py-3 text-white shadow hover:bg-brand/90">
+                Buy Now
+              </a>
+              <span class="text-sm text-slate-500">or contact us at</span>
+              <a href="mailto:domain@sjsu.info" class="text-sm text-brand hover:underline">domain@sjsu.info</a>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
 
-    <script src="assets/script.js"></script>
+    <script src="assets/script.js" defer></script>
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   </body>
   </html>
-
